fixed quote size on mobile

--- a/style.css
+++ b/style.css
@@ -121,3 +121,10 @@ body {
       grid-row: auto;
    }
 }
+
+@media screen and (max-width: 480px) {
+   .card {
+      background-size: 70px;
+      background-position: top 20px right 20px;
+   }
+}
